# mpc-frosty

./: .gitignore  Cargo.toml  Dockerfile  README.md  SOLANA_MPC_PLATFORM_PATCH.diff  docker-compose.yml
.cargo/: config.toml
backend/: Cargo.toml
backend/.sqlx/: query-3339ba1e9d35a5bf2146c9deb9536da828cba800c48c8c047ee4f2f04676f8cb.json  query-5866ee2dcaab746f9b647ad5813bd76905fe56a481c838fad0b5da34291df445.json  query-804a051cdb1ad644f55724bc3b7f71a8a7a4eabe059ed269737bf93c7385a1f9.json  query-98f1959ede2873366c919a1c2022f0655430f27db14eddc845c4cf82369a11fc.json  query-9e514a970adcc18e829e449b0b2802b0c866cd8825b4e49759c576c0364589d8.json  query-a42f40ea536a41684b43e8931e9ee20369cea99080969adefbc27e81f45c9d4b.json  query-e5e8894ea5b9b910734365afbeebf79fe469f9063d940ab658ac84d82522912c.json  query-f2394fb5d5eaa7f3be99a67d67083c956ff0218dba6e76ba3c0c5e12aa847b3a.json
backend/src/: .env  main.rs
backend/src/routes/: auth_middleware.rs  mod.rs  solana.rs  user.rs
indexer/: Cargo.toml
indexer/.sqlx/: query-3faacadd8356f58408fc1e3fbdd5817313c7dd42422c9f63c4e657b9edf82ab9.json  query-c4e8bdf3e31f8930e6877fdb7a904cb14e2cf76033c7dbd2674fb479d0722ada.json
indexer/src/: main.rs  test_indexer.rs  yellowstone.rs
mpc/: Cargo.toml
mpc/src/: main.rs  tss.rs
store/: Cargo.toml
store/.sqlx/: query-398c9fd2d16a0a55427927d02e1ea4056d3cfdbf7880d741fa2cc7a8989e93ba.json
store/migrations/: 20250904171707_create_users.sql  20250908050123_final_db.sql
store/migrations_mpc1/: 20250910181952_create_mpc_keys_table.sql
store/migrations_mpc3/: 20250910182000_create_mpc_keys_table.sql
store/src/: lib.rs  main.rs  mpc_key.rs  mpc_store.rs  user.rs
