[package]
name = "backend"
version = "0.1.0"
edition = "2021"   # keep 2021 for stability, 2024 is still nightly

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
bcrypt = "0.16"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
ed25519-dalek = "1.0.1"
bs58 = "0.4"
env = "1.0.1"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hex = "0.4"
store = { path = "../store" }
lazy_static = "1.5.0"
base64 = "0.22.1"
bincode = "1.3"

solana-client = "2.2.2"
solana-sdk = "2.2.2"
