[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
solana-sdk = "2.2.2"
solana-client = "2.2.2"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"

[[bin]]
name = "test_indexer"
path = "src/test_indexer.rs"
