[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.4"
solana-client = "2.2.2"
solana-sdk = "2.2.2"
zeroize = { workspace = true }
bincode = "1.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.9"
env = "1.0.1"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
frost-ed25519 = { version = "2.2", features = ["serde", "serialization"] }
frost-core = { version = "2.2.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

[dev-dependencies]
solana-test-validator = "2.3.1"
solana-streamer = "2.3.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
assert_cmd = "2.0"
serde_json = "1.0"
