[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
bcrypt = "0.16"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
